for merge commit