@@ -1,7 +1,6 @@
 package com.backendfunction.post.service;
 
 import com.backendfunction.account.entity.Account;
-import com.backendfunction.global.dto.GlobalResDto;
 import com.backendfunction.global.dto.ResponseDto;
 import com.backendfunction.global.image.entity.Image;
 import com.backendfunction.global.image.repository.ImageRepository;
@@ -9,6 +8,7 @@ import com.backendfunction.post.dto.PostReqDto;
 import com.backendfunction.post.dto.PostUpReqDto;
 import com.backendfunction.post.entity.Post;
 import com.backendfunction.post.repository.PostRepository;
+import com.backendfunction.review.entity.Review;
 import com.backendfunction.s3.S3Service;
 import jakarta.persistence.EntityManager;
 import org.springframework.transaction.annotation.Transactional;
@@ -75,43 +75,10 @@ public class PostService {
         log.info("Returning post DTO with image count: {}", post.getImages().size());
         return ResponseDto.success(postDto);
     }
-//    public ResponseDto<?> createPost(PostDto dto, List<MultipartFile> file, Account account) {
-//        List<Image> imageList = new ArrayList<>();
-//        Post post = new Post(dto,account);
-//
-//        for (MultipartFile multipartFile : file) {
-//            Image image = imageRepository.save(new Image(s3Service.uploadFile(multipartFile), post));
-//            imageList.add(image);
-//        }
-//        postRepository.save(post);
-//        PostDto postDto = new PostDto(post);
-//
-//        List<String> images = new ArrayList<>();
-//        for(Image image : imageList){
-//            images.add(image.getImage());
-//        }
-//        postDto.setImgs(images);
-//        return ResponseDto.success(postDto);
-//    }
 
-//    public Map<String, Object> findByPostId(Long id) {
-//        Post post = postRepository.findById(id).orElse(null);
-//        Map<String, Object> data = new HashMap<>();
-//        if (ObjectUtils.isEmpty(post)) {
-//            data.put("dto", null);
-//        } else {
-//            data.put("dto".fromEntity(post));
-//        }
-//        return data;
-//    }
-
-//    public void updateByPost(PostDto dto) {
-//        Post post = PostDto.fromDto(dto);
-//        postRepository.save(post);
-//    }
     public ResponseDto<?> updateByPost(Long id, List<MultipartFile> imgs, PostUpReqDto dto, Account account) {
-        Post post = postRepository.findPostByIdAndAccount(id,account);
-        if(post == null) return ResponseDto.fail("600","수정 권한이 없습니다.");
+        Post post = postRepository.findPostByIdAndAccount(id, account);
+        if (post == null) return ResponseDto.fail("600", "수정 권한이 없습니다.");
 
         post.setTitle(dto.getTitle());
         post.setContent(dto.getContent());
@@ -131,30 +98,27 @@ public class PostService {
 
         return ResponseDto.success("업데이트 성공~");
     }
+
     @Transactional
-    public ResponseDto<?> deleteByPostId(Long id,Account account) {
-        Post post = postRepository.findPostByIdAndAccount(id,account);
-        if(post==null) return ResponseDto.fail("600","삭제 권한이 없습니다.");
+    public ResponseDto<?> deleteByPostId(Long id, Account account) {
+        Post post = postRepository.findPostByIdAndAccount(id, account);
+        if (post == null) return ResponseDto.fail("600", "삭제 권한이 없습니다.");
         postRepository.delete(post);
         return ResponseDto.success("삭제 완료");
-
     }
 
     @Transactional(readOnly = true)
     public List<PostReqDto> findAll() {
         List<Post> posts = postRepository.findAll();
-        return posts.stream().map(x -> PostReqDto.fromEntity(x)).toList();
+
+        // Recalculate averageRating and reviewSize for each post
+        posts.forEach(post -> {
+            post.recalculateAverageRating();
+            post.setReviewSize(post.getReviews().size()); // Set reviewSize
+        });
+
+        return posts.stream()
+                .map(PostReqDto::fromEntity) // Convert Post to PostReqDto
+                .collect(Collectors.toList());
     }
-//    @Transactional(readOnly = true)
-//    public PostDto findByid(Long postId) {
-//        Post post = postRepository.findById(postId).orElse(null);
-//        return PostDto.fromEntity(post);
-//    }
-//
-//    public List<PostDto> findByCategory(Category category) {
-//        List<Post> posts = postRepository.findByCategory(category);
-//        return posts.stream().map(x -> PostDto.fromEntity(x)).toList();
-//    }
-
-
 }
